updated private page style and added orderform

--- a/tjanster/privat/index.html
+++ b/tjanster/privat/index.html
@@ -9,19 +9,19 @@
 	<!-- favicons -->
 	<link rel="shortcut icon" href="../../favicon.ico">
 	<!-- Making the website social media friendly-->
-	<meta name="description" content="Vi erbjuder certifierade &amp; oberoende besiktningsmän för  både fastighet &amp; utemiljö. Du hittar oss bland annat i Stockholm, Malmö &amp; Göteborg. Kontakta oss" />
+	<meta name="description" content="För dig som ska bygga nytt, bygga till eller bygga om, erbjuder vi alla typer av opartiska besiktningstjänster samt även KA-Kontrollansvarig." />
 	<meta name="robots" content="noodp" />
 	<link rel="canonical" href="https://www.besiktningsman.se/" />
 	<meta property="og:locale" content="sv_SE" />
 	<meta property="og:type" content="website" />
-	<meta property="og:title" content="Vi är ett fristående besiktningsföretag som utför besiktningar objektivt och opartiskt enligt gällande bygg- och branschregler." />
-	<meta property="og:description" content="Vi erbjuder certifierade &amp; oberoende besiktningsmän för  både fastighet &amp; utemiljö. Du hittar oss bland annat i Stockholm, Malmö &amp; Göteborg. Kontakta oss" />
+	<meta property="og:title" content="Besiktning för privatpersoner som skall bygga, ändra eller kontrollera husets skick." />
+	<meta property="og:description" content="För dig som ska bygga nytt, bygga till eller bygga om, erbjuder vi alla typer av opartiska besiktningstjänster samt även KA-Kontrollansvarig." />
 	<meta property="og:url" content="https://www.besiktningsman.se/tjanster/privat" />
-	<meta property="og:site_name" content="Besiktningsman.se | Sveriges ledande besiktningsföretag">
+	<meta property="og:site_name" content="Besiktningsman.se | Besktningstjänster för privatpersoner">
 	<meta property="og:image" content="../../assets/img/backgrounds/og_image.jpg" />
-	<meta name="twitter:card" content="Digital besiktning för lönsammare byggprojekt" />
-	<meta name="twitter:description" content="Vi erbjuder certifierade &amp; oberoende besiktningsmän för  både fastighet &amp; utemiljö. Du hittar oss bland annat i Stockholm, Malmö &amp; Göteborg. Kontakta oss" />
-	<meta name="twitter:title" content="Certifierad &amp; oberoende besiktningsman för fastighet &amp; utemiljö" />
+	<meta name="twitter:card" content="summary" />
+	<meta name="twitter:title" content="Besiktning för privatpersoner som skall bygga, ändra eller kontrollera husets skick." />
+	<meta name="twitter:description" content="För dig som ska bygga nytt, bygga till eller bygga om, erbjuder vi alla typer av opartiska besiktningstjänster samt även KA-Kontrollansvarig." />
 	<!-- Fonts and Material Icons -->
 	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700|Material+Icons" rel="stylesheet" type="text/css" />
 	<!-- Styles -->
@@ -200,16 +200,16 @@
 		<div class="container">
 			<div class="container-lg">
 				<div class="fix-10-12 margin-top-1">
-					<h2>Privatpersoner</h2>
-					<h3>Besiktning för privatpersoner som skall bygga, ändra eller kontrollera husets skick.</h3>
-					<p>
+					<h2 class="common-IntroText">Privatpersoner</h2>
+					<h3 class="common-BodyTitle">Besiktning för privatpersoner som skall bygga, ändra eller kontrollera husets skick.</h3>
+					<p class="common-BodyText">
 						För dig som ska bygga nytt, bygga till eller bygga om, erbjuder vi alla typer av opartiska besiktningstjänster samt även KA-Kontrollansvarig.
 						<br> Våra tjänster utförs enligt ABK-Allmänna bestämmelseer för konsulter. De hantverkare som ni anlitat För att utföra de hantverkstjänster ni beställt har att arbeta enligt konsumenttjänstlagen, ABS- Allmänna Bestämmelser för Småhus (typ villa),
 						hantverkarformuläret, etc.
 						<br> Vi erbjuder också besiktning om du vill kontrollera husets skick, exempelvis statusbesiktning, eller om du misstänker fuktskador eller andra problem, te x skadeutredning.
 					</p>
-					<h3>Vid nybyggnation och ROT-arbeten</h3>
-					<p>
+					<h3 class="common-BodyTitle">Vid nybyggnation och ROT-arbeten</h3>
+					<p class="common-BodyText">
 						Om du bygger nytt eller gör andra förändringar som kräver bygglov finns vissa besiktningar som bör göras.
 						<br> Du behöver även anlita en Kontrollansvarig (KA) som hjälper dig att leva upp till myndighetskrav reglerat i Plan- och bygglagen. Kommunen kommer att ge dig information om vad som krävs i samband med att bygglovet behandlas.
 						<br>
@@ -218,19 +218,19 @@
 						<br> Glöm inte heller att göra en besiktning inom 2 år (§59-besiktning enligt ABS, typ villa), alternativt reklamationsbesiktning, exempelvis vid lägenhetsrenovering, enligt konsumenttjänstlagen §17. Reklamation skall sek inom skälig tid. Då kontrolleras
 						om fel som kan ha uppstått åligger entreprenören att avhjälpa.
 					</p>
-					<h3>För att kontrollera byggnadens skick</h3>
-					<p>
+					<h3 class="common-BodyTitle">För att kontrollera byggnadens skick</h3>
+					<p class="common-BodyText">
 						Vi erbjuder olika typer av besiktning, exempelvis för att kontrollera om det finns fukt, mögel eller andra skador, samt statusbesiktningar för att få en sakkunnig bedömning av hur huset mår.
 					</p>
 				</div>
 
 			</div>
 		</div>
-		<section class="slide whiteSlide autoHeight margin-bottom-10" id="privat-tjanster">
+		<section class="slide whiteSlide autoHeight" id="privat-tjanster">
 			<div class="container">
 				<div class="container-lg">
 					<div class="fix-10-12 left">
-						<h2 class="small bold">Traditionella besiktningar enligt ABS och KtjL-konsumenttjänst lagen</h2>
+						<h2 class="common-BodyTitle">Traditionella besiktningar enligt ABS och KtjL-konsumenttjänst lagen</h2>
 						<div class="accordion">
 							<h3>Förbesiktning</h3>
 							<div>
@@ -435,8 +435,8 @@
 						<!-- grid div end -->
 					</div>
 					<div class="fix-10-12">
-						<h2 class="small bold">Som exempel på ovan beskrivna besiktningstjänster kan nämnas:</h2>
-						<p class="small">
+						<h2 class="common-BodyTitle">Som exempel på ovan beskrivna besiktningstjänster kan nämnas:</h2>
+						<p class="common-BodyText">
 							• Målningsbesiktningar
 							<br> • Badrumsbesiktningar-råyta-tätskikt-färdigställt
 							<br> • Tvättstugebesiktningar
@@ -461,7 +461,7 @@
 							<br> • Gårdshus-återvinning-källsortering
 						</p>
 					</div>
-					<div class="fix-10-12 left margin-bottom-3">
+					<!-- <div class="fix-10-12 left margin-bottom-3">
 						<h3 class="margin-0">Redo att sätta igång?</h3>
 						<p class="micro margin-0">Enklaste sättet är att fylla i vårt kontaktformulär så hör vi av oss.</p>
 						<br>
@@ -472,11 +472,47 @@
 						<br>
 						<br>
 						<a href="tel:0101654000" class="bold text-blue">Alternativt ring oss på: 010-165 40 00</a>
-					</div>
+					</div> -->
 				</div>
 			</div>
 		</section>
 
+	</section>
+	<section class="slide white form-section">
+		<div class="container-lg">
+				<div class="formBackground form-column">
+						<h3 class="pad-header margin-0 text-blueGrey center">
+							Redo att boka?
+							<p class="small bold dark margin-0 common-BodyText" style="font-size: 16px;">Lämna ett meddelande så hör vi av oss.</p>
+						</h3>
+						<div class="typeform-widget" data-url="https://besiktningsman-se.typeform.com/to/vHXN4C" data-transparency="100" data-hide-headers=true style="width: 100%; height: 400px;"></div>
+						<script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
+				</div>
+				<div class="secondary-column">
+					<div class="customers">
+						<p class="copy-1">Du är i gott sällskap.</p>
+						<p class="copy-2">Gör som många andra och anlita Besiktningsman.se</p>
+						<ul class="customer-logos">
+							<li class="customer-logo">
+								<img src="../../../assets/img/logos/tjanster/einarmattsson_logo.png" alt="EINAR MATTSSON">
+							</li>
+							<!-- <li class="customer-logo">
+								<img src="../../../assets/img/logos/tjanster/ssm_logo.png" alt="SSM">
+							</li> -->
+							<li class="customer-logo">
+								<img src="../../assets/img/logos/tjanster/skanska_logo.png" alt="SKANSKA">
+							</li>
+							<li class="customer-logo">
+								<img src="../../assets/img/logos/tjanster/ncc_logo.png" alt="NCC" style="padding-bottom: 15px;">
+							</li>
+							<li class="customer-logo">
+								<img src="../../assets/img/logos/tjanster/peab_logo.png" alt="PEAB">
+							</li>
+						</ul>
+					</div>
+				</div>
+
+		</div>
 	</section>
 	<!-- Footer -->
 	<section class="slide customFooter autoHeight">
