Minor style updates while uploading to the live page

--- a/tjanster/brf/index.html
+++ b/tjanster/brf/index.html
@@ -186,7 +186,7 @@
 				<div class="wrap">
 
 					<div class="fix-10-12" style="padding-top: 5%;">
-						<h1 class="hero-title">Bostadsrättsföreningar</h1>
+						<h1 class="hero-title">Besiktningstjänster för bostadsrättsföreningar</h1>
 						<p>
 							Besiktningsman.se erbjuder ett komplett och rikstäckande utbud av besiktningstjänster vid nyproduktion, <br>ROT och KA-Kontrollansvarig för bostadsrättsföreningar.
 						</p>
@@ -202,7 +202,7 @@
 			<div class="container-lg">
 				<div class="fix-10-12 margin-top-1">
 
-					<h2 style="margin-left: -3px;" class="common-IntroText">Besiktningstjänster för bostadsrättsföreningar</h2>
+					<h2 style="margin-left: -3px;" class="common-IntroText">Bostadsrättsföreningar</h2>
 					<p class="common-BodyText">
 						Besiktningsman.se erbjuder ett komplett och rikstäckande utbud av besiktningstjänster vid ROT (Renovering, ombyggnad, Tillbyggnad), samt KA-Kontrollansvarig.
 						<br>
