--- a/tjanster/privat/index.html
+++ b/tjanster/privat/index.html
@@ -363,7 +363,7 @@
 						<br>
 
 						<!-- övriga tjänster -->
-						<h2 class="small bold">Övriga tjänster</h2>
+						<h2 class="common-BodyTitle">Övriga tjänster</h2>
 						<div class="accordion margin-bottom-3">
 
 							<h3>OVK - Obligatorisk ventilationskontroll</h3>
