revamped contact page

--- a/kontakt/index.html
+++ b/kontakt/index.html
@@ -172,21 +172,27 @@
 
 	</div>
 </nav>
-
-	<!-- typeform contact form --><!-- HEADER -->
-	<section class="slide fade contact" id="contactHeader">
+	<!-- HEADER -->
+	<div class="StripeBackground">
+	    <div class="stripe s0"></div>
+	    <div class="stripe s2"></div>
+	    <div class="stripe s3"></div>
+	    <div class="stripe s4"></div>
+	</div>
+	<!-- typeform contact form -->
+	<section class="slide contact form-section" id="contactHeader" style="background: transparent;">
 		<div class="content">
 			<div class="container" style="height: 560px;">
 				<div class="wrap">
-					<h1 class="">Hör gärna av dig!</h1>
-					<p class="bold text-white opacity-10">
-						<a href="tel:0101654000">Telefon: 010-165 40 00</a>
+					<h1 class="common-IntroText">Kontakta oss</h1>
+					<p class="common-BodyText">Vårt team svarar gärna på dina frågor. <br>Fyll i formuläret nedan så hör vi av oss så fort vi kan!</p>
+					<p class="common-Link">
+						<a href="tel:0101654000">Ni kan även ringa oss mellan 08:30 - 17:00 på 010-165 40 00</a>
 					</p>
-					<div class="fix-5-12" id="contactModal">
-						<div class="pad shadow selected">
+					<div class="form-column" id="contactModal">
+						<div class="pad">
 							<h3 class="pad-header margin-0 text-blueGrey">
-								Inte tid att ringa?
-								<p class="small bold dark margin-0" style="font-size: 16px;">Lämna ett meddelande så hör vi av oss.</p>
+								Kontaktformulär
 							</h3>
 							<div class="typeform-widget" data-url="https://besiktningsman-se.typeform.com/to/Qwy9Nf" data-hide-headers=true style="width: 100%; height: 400px;" > </div>
 							<script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
@@ -200,7 +206,6 @@
 				</div>
 			</div>
 		</div>
-		<div class="background" style="background-image:url(../assets/img/backgrounds/keyboard.jpg)"></div>
 	</section>
 <!-- Footer -->
 <section class="slide customFooter">
@@ -245,281 +250,281 @@
 				<div class="container-lg">
 					<div class="wrap left">
 						<div class="fix-10-12">
-								<h2>Ledning</h2>
+								<h2 class="common-IntroText">Ledning</h2>
 								<!--  List one -->
 								<ul class="flex fixedSpaces later left margin-bottom-5">
 									<li class="col-3-12">
-										<h3>Magnus Janson</h3>
-										<p class="micro bold">Verkställande Direktör</p>
+										<h3 class="common-BodyTitle">Magnus Janson</h3>
+										<p class="common-BodyText">Verkställande Direktör</p>
 										<a href="mailto:magnus.janson@besiktningsman.se">
-											<p class="micro bold text-blue">magnus.janson@besiktningsman.se</p>
+											<p class="common-Link">magnus.janson@besiktningsman.se</p>
 										</a>
 									</li>
 									<li class="col-3-12">
-										<h3>Marie Selling</h3>
-										<p class="micro bold">Projekt & Ekonomichef</p>
+										<h3 class="common-BodyTitle">Marie Selling</h3>
+										<p class="common-BodyText">Projekt & Ekonomichef</p>
 										<a href="mailto:marie@besiktningsman.se">
-											<p class="micro bold text-blue">marie@besiktningsman.se</p>
+											<p class="common-Link">marie@besiktningsman.se</p>
 										</a>
 									</li>
 									<li class="col-3-12">
-										<h3>Björn Selling</h3>
-										<p class="micro bold">Affärschef</p>
+										<h3 class="common-BodyTitle">Björn Selling</h3>
+										<p class="common-BodyText">Affärschef</p>
 										<a href="mailto:bjorn@besiktningsman.se">
-											<p class="micro bold text-blue">bjorn@besiktningsman.se</p>
+											<p class="common-Link">bjorn@besiktningsman.se</p>
 										</a>
 									</li>
 									<li class="col-3-12">
-										<h3>Jonny Seidel</h3>
-										<p class="micro bold">Arbetande styrelseordförande</p>
+										<h3 class="common-BodyTitle">Jonny Seidel</h3>
+										<p class="common-BodyText">Arbetande styrelseordförande</p>
 										<a href="mailto:jonny@besiktningsman.se">
-											<p class="micro bold text-blue">jonny@besiktningsman.se</p>
+											<p class="common-Link">jonny@besiktningsman.se</p>
 										</a>
 									</li>
 									<li class="col-3-12">
-										<h3>Martin Viberg</h3>
-										<p class="micro bold">Besiktningschef</p>
+										<h3 class="common-BodyTitle">Martin Viberg</h3>
+										<p class="common-BodyText">Besiktningschef</p>
 										<a href="mailto:martin@besiktningsman.se">
-											<p class="micro bold text-blue">martin@besiktningsman.se</p>
+											<p class="common-Link">martin@besiktningsman.se</p>
 										</a>
 									</li>
 								</ul>
 								<!--  employees -->
-								<h2>Projektavdelning</h2>
+								<h2 class="common-IntroText">Projektavdelning</h2>
 								<ul class="flex fixedSpaces later left margin-bottom-5">
 									<li class="col-3-12">
 										<h3>Madeleine Müller</h3>
-										<p class="micro bold">Projektansvarig Storkund</p>
+										<p class="common-BodyText">Projektansvarig Storkund</p>
 										<a href="mailto:madeleine@besiktningsman.se">
-											<p class="micro bold text-blue">madeleine@besiktningsman.se</p>
+											<p class="common-Link">madeleine@besiktningsman.se</p>
 										</a>
 									</li>
 									<li class="col-3-12">
 										<h3>Nalle Gellermark</h3>
-										<p class="micro bold">Projektansvarig Privatpersoner</p>
+										<p class="common-BodyText">Projektansvarig Privatpersoner</p>
 										<a href="mailto:nalle@besiktningsman.se">
-											<p class="micro bold text-blue">nalle@besiktningsman.se</p>
+											<p class="common-Link">nalle@besiktningsman.se</p>
 										</a>
 									</li>
 									<li class="col-3-12">
 										<h3>Madeleine Pettersson</h3>
-										<p class="micro bold">Projektassistent</p>
+										<p class="common-BodyText">Projektassistent</p>
 										<a href="mailto:madde@besiktningsman.se">
-											<p class="micro bold text-blue">madde@besiktningsman.se</p>
+											<p class="common-Link">madde@besiktningsman.se</p>
 										</a>
 									</li>
 									<li class="col-3-12">
 										<h3>Mia Tapper</h3>
-										<p class="micro bold">Projektassistent</p>
+										<p class="common-BodyText">Projektassistent</p>
 										<a href="mailto:mia.tapper@besiktningsman.se">
-											<p class="micro bold text-blue">mia.tapper@besiktningsman.se</p>
+											<p class="common-Link">mia.tapper@besiktningsman.se</p>
 										</a>
 									</li>
 								</ul>
 								<!--  inspectors -->
-								<h2>Besiktningsmän</h2>
+								<h2 class="common-IntroText">Besiktningsmän</h2>
 								<ul class="flex fixedSpaces later left margin-bottom-5">
 									<li class="col-3-12">
 										<h3>Olof Johansson</h3>
-										<p class="micro bold">Besiktningsman</p>
+										<p class="common-BodyText">Besiktningsman</p>
 										<a href="mailto:olof@besiktningsman.se">
-											<p class="micro bold text-blue">olof@besiktningsman.se</p>
+											<p class="common-Link">olof@besiktningsman.se</p>
 										</a>
 									</li>
 									<li class="col-3-12">
 										<h3>Mathias Wussow</h3>
-										<p class="micro bold">Besiktningsman</p>
+										<p class="common-BodyText">Besiktningsman</p>
 										<a href="mailto:mathias@besiktningsman.se">
-											<p class="micro bold text-blue">mathias@besiktningsman.se</p>
+											<p class="common-Link">mathias@besiktningsman.se</p>
 										</a>
 									</li>
 									<li class="col-3-12">
 										<h3>Tom Maurell</h3>
-										<p class="micro bold">Besiktningsman</p>
+										<p class="common-BodyText">Besiktningsman</p>
 										<a href="mailto:tom.maurell@besiktningsman.se">
-											<p class="micro bold text-blue">tom.maurell@besiktningsman.se</p>
+											<p class="common-Link">tom.maurell@besiktningsman.se</p>
 										</a>
 									</li>
 									<li class="col-3-12">
 										<h3>John Eriksson</h3>
-										<p class="micro bold">Besiktningsman</p>
+										<p class="common-BodyText">Besiktningsman</p>
 										<a href="mailto:john.eriksson@besiktningsman.se">
-											<p class="micro bold text-blue">john.eriksson@besiktningsman.se</p>
+											<p class="common-Link">john.eriksson@besiktningsman.se</p>
 										</a>
 									</li>
 									<li class="col-3-12">
 										<h3>Daniel Mancilla</h3>
-										<p class="micro bold">Besiktningsman</p>
+										<p class="common-BodyText">Besiktningsman</p>
 										<a href="mailto:daniel.mancilla@besiktningsman.se">
-											<p class="micro bold text-blue">daniel.mancilla@besiktningsman.se</p>
+											<p class="common-Link">daniel.mancilla@besiktningsman.se</p>
 										</a>
 									</li>
 									<li class="col-3-12">
 										<h3>Fredrik Lundgren</h3>
-										<p class="micro bold">Besiktningsman</p>
+										<p class="common-BodyText">Besiktningsman</p>
 										<a href="mailto:fredrik.lundgren@besiktningsman.se">
-											<p class="micro bold text-blue">fredrik.lundgren@besiktningsman.se</p>
+											<p class="common-Link">fredrik.lundgren@besiktningsman.se</p>
 										</a>
 									</li>
 									<li class="col-3-12">
 										<h3>Karl-Fredrik Olsson</h3>
-										<p class="micro bold">Besiktningsman</p>
+										<p class="common-BodyText">Besiktningsman</p>
 										<a href="mailto:karl-fredrik@besiktningsman.se">
-											<p class="micro bold text-blue">karl-fredrik@besiktningsman.se</p>
+											<p class="common-Link">karl-fredrik@besiktningsman.se</p>
 										</a>
 									</li>
 									<li class="col-3-12">
 										<h3>Leif Berg</h3>
-										<p class="micro bold">Besiktningsman</p>
+										<p class="common-BodyText">Besiktningsman</p>
 										<a href="mailto:leif.berg@besiktningsman.se">
-											<p class="micro bold text-blue">leif.berg@besiktningsman.se</p>
+											<p class="common-Link">leif.berg@besiktningsman.se</p>
 										</a>
 									</li>
 									<li class="col-3-12">
 										<h3>Magnus Engström</h3>
-										<p class="micro bold">Besiktningsman</p>
+										<p class="common-BodyText">Besiktningsman</p>
 										<a href="mailto:magnus.engstrom@besiktningsman.se">
-											<p class="micro bold text-blue">magnus.engstrom@besiktningsman.se</p>
+											<p class="common-Link">magnus.engstrom@besiktningsman.se</p>
 										</a>
 									</li>
 									<li class="col-3-12">
 										<h3>Lasse Grandahl</h3>
-										<p class="micro bold">Besiktningsman</p>
+										<p class="common-BodyText">Besiktningsman</p>
 										<a href="mailto:lasse@besiktningsman.se">
-											<p class="micro bold text-blue">lasse@besiktningsman.se</p>
+											<p class="common-Link">lasse@besiktningsman.se</p>
 										</a>
 									</li>
 									<li class="col-3-12">
 										<h3>Örjan Höglund</h3>
-										<p class="micro bold">Besiktningsman</p>
+										<p class="common-BodyText">Besiktningsman</p>
 										<a href="mailto:orjan@besiktningsman.se">
-											<p class="micro bold text-blue">orjan@besiktningsman.se</p>
+											<p class="common-Link">orjan@besiktningsman.se</p>
 										</a>
 									</li>
 									<li class="col-3-12">
 										<h3>Charlie Höglund</h3>
-										<p class="micro bold">Besiktningsman</p>
+										<p class="common-BodyText">Besiktningsman</p>
 										<a href="mailto:charlie.hoglund@besiktningsman.se">
-											<p class="micro bold text-blue">charlie.hoglund@besiktningsman.se</p>
+											<p class="common-Link">charlie.hoglund@besiktningsman.se</p>
 										</a>
 									</li>
 									<li class="col-3-12">
 										<h3>Jeanette Immo</h3>
-										<p class="micro bold">Besiktningsman</p>
+										<p class="common-BodyText">Besiktningsman</p>
 										<a href="mailto:jeanette@besiktningsman.se">
-											<p class="micro bold text-blue">jeanette@besiktningsman.se</p>
+											<p class="common-Link">jeanette@besiktningsman.se</p>
 										</a>
 									</li>
 									<li class="col-3-12">
 										<h3>Dan Jakobsson</h3>
-										<p class="micro bold">Besiktningsman</p>
+										<p class="common-BodyText">Besiktningsman</p>
 										<a href="mailto:dan@besiktningsman.se">
-											<p class="micro bold text-blue">dan@besiktningsman.se</p>
+											<p class="common-Link">dan@besiktningsman.se</p>
 										</a>
 									</li>
 									<li class="col-3-12">
 										<h3>Ulf Johansson</h3>
-										<p class="micro bold">Besiktningsman</p>
+										<p class="common-BodyText">Besiktningsman</p>
 										<a href="mailto:ulf@besiktningsman.se">
-											<p class="micro bold text-blue">ulf@besiktningsman.se</p>
+											<p class="common-Link">ulf@besiktningsman.se</p>
 										</a>
 									</li>
 									<li class="col-3-12">
 										<h3>Robert Lindbom</h3>
-										<p class="micro bold">Besiktningsman</p>
+										<p class="common-BodyText">Besiktningsman</p>
 										<a href="mailto:robert@besiktningsman.se">
-											<p class="micro bold text-blue">robert@besiktningsman.se</p>
+											<p class="common-Link">robert@besiktningsman.se</p>
 										</a>
 									</li>
 									<li class="col-3-12">
 										<h3>Göran Svensson</h3>
-										<p class="micro bold">Besiktningsman</p>
+										<p class="common-BodyText">Besiktningsman</p>
 										<a href="mailto:goran@besiktningsman.se">
-											<p class="micro bold text-blue">goran@besiktningsman.se</p>
+											<p class="common-Link">goran@besiktningsman.se</p>
 										</a>
 									</li>
 									<li class="col-3-12">
 										<h3>Margareta Telkert</h3>
-										<p class="micro bold">Besiktningsman</p>
+										<p class="common-BodyText">Besiktningsman</p>
 										<a href="mailto:margareta@besiktningsman.se">
-											<p class="micro bold text-blue">margareta@besiktningsman.se</p>
+											<p class="common-Link">margareta@besiktningsman.se</p>
 										</a>
 									</li>
 									<li class="col-3-12">
 										<h3>Jim Löfgren</h3>
-										<p class="micro bold">Besiktningsman</p>
+										<p class="common-BodyText">Besiktningsman</p>
 										<a href="mailto:jim@besiktningsman.se">
-											<p class="micro bold text-blue">jim@besiktningsman.se</p>
+											<p class="common-Link">jim@besiktningsman.se</p>
 										</a>
 									</li>
 									<li class="col-3-12">
 										<h3>Leo Simic</h3>
-										<p class="micro bold">Besiktningsman</p>
+										<p class="common-BodyText">Besiktningsman</p>
 										<a href="mailto:leo@besiktningsman.se">
-											<p class="micro bold text-blue">leo@besiktningsman.se</p>
+											<p class="common-Link">leo@besiktningsman.se</p>
 										</a>
 									</li>
 									<li class="col-3-12">
 										<h3>Michael Stenman</h3>
-										<p class="micro bold">Besiktningsman</p>
+										<p class="common-BodyText">Besiktningsman</p>
 										<a href="mailto:michael.stenman@besiktningsman.se">
-											<p class="micro bold text-blue">michael.stenman@besiktningsman.se</p>
+											<p class="common-Link">michael.stenman@besiktningsman.se</p>
 										</a>
 									</li>
 									<li class="col-3-12">
 										<h3>Niklas Josefsson</h3>
-										<p class="micro bold">Besiktningsman</p>
+										<p class="common-BodyText">Besiktningsman</p>
 										<a href="mailto:niklas.josefsson@besiktningsman.se">
-											<p class="micro bold text-blue">niklas.josefsson@besiktningsman.se</p>
+											<p class="common-Link">niklas.josefsson@besiktningsman.se</p>
 										</a>
 									</li>
 									<li class="col-3-12">
 										<h3>Olof Andersson</h3>
-										<p class="micro bold">Besiktningsman</p>
+										<p class="common-BodyText">Besiktningsman</p>
 										<a href="mailto:olof.andersson@besiktningsman.se">
-											<p class="micro bold text-blue">olof.andersson@besiktningsman.se</p>
+											<p class="common-Link">olof.andersson@besiktningsman.se</p>
 										</a>
 									</li>
 									<li class="col-3-12">
 										<h3>Staffan Tjulander</h3>
-										<p class="micro bold">Besiktningsman</p>
+										<p class="common-BodyText">Besiktningsman</p>
 										<a href="mailto:staffan.tjulander@besiktningsman.se">
-											<p class="micro bold text-blue">staffan.tjulander@besiktningsman.se</p>
+											<p class="common-Link">staffan.tjulander@besiktningsman.se</p>
 										</a>
 									</li>
 									<li class="col-3-12">
 										<h3>Sanharib Safar</h3>
-										<p class="micro bold">Besiktningsman</p>
+										<p class="common-BodyText">Besiktningsman</p>
 										<a href="mailto:safar@besiktningsman.se">
-											<p class="micro bold text-blue">safar@besiktningsman.se</p>
+											<p class="common-Link">safar@besiktningsman.se</p>
 										</a>
 									</li>
 									<li class="col-3-12">
 										<h3>Thomas Karlsson</h3>
-										<p class="micro bold">Besiktningsman</p>
+										<p class="common-BodyText">Besiktningsman</p>
 										<a href="mailto:thomas.karlsson@besiktningsman.se">
-											<p class="micro bold text-blue">thomas.karlsson@besiktningsman.se</p>
+											<p class="common-Link">thomas.karlsson@besiktningsman.se</p>
 										</a>
 									</li>
 									<li class="col-3-12">
 										<h3>Thorbjörn Grundström</h3>
-										<p class="micro bold">Besiktningsman</p>
+										<p class="common-BodyText">Besiktningsman</p>
 										<a href="mailto:thorbjorn@besiktningsman.se">
-											<p class="micro bold text-blue">thorbjorn@besiktningsman.se</p>
+											<p class="common-Link">thorbjorn@besiktningsman.se</p>
 										</a>
 									</li>
 									<li class="col-3-12">
 										<h3>Ulf Johansson</h3>
-										<p class="micro bold">Besiktningsman</p>
+										<p class="common-BodyText">Besiktningsman</p>
 										<a href="mailto:ulf@besiktningsman.se">
-											<p class="micro bold text-blue">ulf@besiktningsman.se</p>
+											<p class="common-Link">ulf@besiktningsman.se</p>
 										</a>
 									</li>
 									<li class="col-3-12">
 										<h3>Patrik Svensson</h3>
-										<p class="micro bold">Besiktningsman</p>
+										<p class="common-BodyText">Besiktningsman</p>
 										<a href="mailto:patrik.svensson@besiktningsman.se">
-											<p class="micro bold text-blue">patrik.svensson@besiktningsman.se</p>
+											<p class="common-Link">patrik.svensson@besiktningsman.se</p>
 										</a>
 									</li>
 								</ul>
