Updated copy in contact

--- a/kontakt/index.html
+++ b/kontakt/index.html
@@ -185,7 +185,7 @@
 			<div class="container" style="height: 560px;">
 				<div class="wrap">
 					<h1 class="common-IntroText">Kontakta oss</h1>
-					<p class="common-BodyText">Vårt team svarar gärna på dina frågor. <br>Fyll i formuläret nedan så hör vi av oss så fort vi kan!</p>
+					<p class="common-BodyText">Vi svarar gärna på dina frågor. <br>Fyll i formuläret nedan så hör vi av oss så fort som möjligt.</p>
 					<p class="common-Link">
 						<a href="tel:0101654000">Ni kan även ringa oss mellan 08:30 - 17:00 på 010-165 40 00</a>
 					</p>
