--- a/kontakt/index.html
+++ b/kontakt/index.html
@@ -187,7 +187,7 @@
 					<h1 class="common-IntroText">Kontakta oss</h1>
 					<p class="common-BodyText">Vi svarar gärna på dina frågor. <br>Fyll i formuläret nedan så hör vi av oss så fort som möjligt.</p>
 					<p class="common-Link">
-						<a href="tel:0101654000">Ni kan även ringa oss mellan 08:30 - 17:00 på 010-165 40 00</a>
+						<a href="tel:0101654000">Ni kan även ringa oss mellan <br>08:30 - 17:00 på 010-165 40 00</a>
 					</p>
 					<div class="form-column" id="contactModal">
 						<div class="pad">
