Project page style updated

--- a/projekt/index.html
+++ b/projekt/index.html
@@ -148,22 +148,28 @@
 
 		</div>
 	</nav>
-
 	<!-- HEADER -->
-	<section class="slide whiteSlide">
+	<div class="StripeBackground">
+	    <div class="stripe s0"></div>
+	    <div class="stripe s2"></div>
+	    <div class="stripe s3"></div>
+	    <div class="stripe s4"></div>
+	</div>
+	<!-- HEADER -->
+	<section class="slide" style="background: transparent;">
 		<div class="content">
-			<div class="container" style="height:560px;">
-				<!-- contents -->
-				<h1 class="center margin-top-1">Våra projekt</h1>
-				<p class="center">Här byggs framtiden med noll fel</p>
-				<div class="photobanner">
-					<img class="first" src="../assets/img/projects/panorama_projects.jpg" alt="Panorama bild med utvalda projekt" />
-					<!-- duplicates to fake the panorama fx -->
-					<img src="../assets/img/projects/panorama_projects.jpg" alt="Panorama bild med utvalda projekt" />
-					<img src="../assets/img/projects/panorama_projects.jpg" alt="Panorama bild med utvalda projekt" />
-					<img src="../assets/img/projects/panorama_projects.jpg" alt="Panorama bild med utvalda projekt" />
-					<img src="../assets/img/projects/panorama_projects.jpg" alt="Panorama bild med utvalda projekt" />
-				</div>
+			<div class="container margin-top-1" style="height:560px;">
+					<!-- contents -->
+					<h1 class="common-IntroText center">Våra projekt</h1>
+					<p class="common-BodyText center">Här byggs framtiden med noll fel</p>
+					<div class="photobanner">
+						<img class="first" style="0 15px 35px rgba(0,0,0,.1), 0 3px 10px rgba(0,0,0,.07)" src="../assets/img/projects/panorama_projects.png" alt="Panorama bild med utvalda projekt" />
+						<!-- duplicates to fake the panorama fx -->
+						<img src="../assets/img/projects/panorama_projects.png" alt="Panorama bild med utvalda projekt" />
+						<img src="../assets/img/projects/panorama_projects.png" alt="Panorama bild med utvalda projekt" />
+						<img src="../assets/img/projects/panorama_projects.png" alt="Panorama bild med utvalda projekt" />
+						<img src="../assets/img/projects/panorama_projects.png" alt="Panorama bild med utvalda projekt" />
+					</div>
 
 			</div>
 		</div>
