--- a/nyheter/index.html
+++ b/nyheter/index.html
@@ -185,6 +185,9 @@
 									Besiktningsbloggen
 								</h3>
 								<div class="margin-left-2">
+									<a href="https://medium.com/besiktningsbloggen/sluta-betala-oss-de0640a6b6c9">
+										<p class="common-Link" style="margin-top: 15px;">Sluta betala oss!</p>
+									</a>
 									<a href="https://medium.com/besiktningsbloggen/har-du-byggkort-e2adb48b2508">
 										<p class="common-Link" style="margin-top: 15px;">Har du byggkort?!</p>
 									</a>
