--- a/index.html
+++ b/index.html
@@ -201,7 +201,9 @@
 					<div class="fix-10-12" style="padding-top: 5%;">
 						<img src="assets/svg/bm_logo_white_top.svg" alt="Besiktningsman.se" class="border-bottom" style="border-bottom: none;">
 						<p class="hero">Sveriges ledande entreprenadbesiktningsföretag</p>
-						<a href="#entreprenad" class="common-Button white text-blue fromCenter">ENTREPRENAD</a><a href="#brf" class="common-Button white text-blue fromCenter" id="landingButton2">BRF / PRIVAT</a>
+						<a href="#entreprenad" class="common-Button text-blue fromCenter">ENTREPRENAD</a>
+						<a href="#brf" class="common-Button text-blue fromCenter">brf</a>
+						<a href="#privat" class="text-blue fromCenter onTop inactive-Button" data-tooltip="Besiktningstjänsterna för privatpersoner är för tillfället fullbokade.">PRIVAT</a>
 						<br>
 						<br>
 						<a href="tel:0101654000" id="mobilePhoneNumber">
@@ -431,6 +433,12 @@
 					<div class="fix-12-12">
 						<ul class="flex reverse">
 							<li class="col-6-12 left cell-32">
+								<div class="announcement">
+				          <span class="new-pill">OBS</span>
+				          <span class="message">
+				              Besiktningstjänsterna för privatpersoner är för tillfället fullbokade.
+				          </span>
+								</div>
 								<h2 class="common-IntroText">Besiktningstjänster för privatpersoner</h2>
 								<h3 class="common-BodyTitle">Småhus, lägenheter, fritidshus</h3>
 								<p class="common-BodyText">Besiktningsman.se erbjuder besiktningstjänster för samtliga fack för besiktning av småhus, fritidshus och lägenheter, samt KA-ansvariga.</p>
