Updated the slider with buttons + fix css of the images

--- a/index.html
+++ b/index.html
@@ -271,7 +271,18 @@
 								<!-- Projects: Slider Autoplay -->
 								<div class="fix-7-12 noSelect">
 									<div class="sliderBox-83">
+
 										<ul class="slider clickable autoplay fromAbove Quote common-Card" data-slider-interval="5000" data-slider-stoponclick="false" data-slider-id="83">
+											<div class="leftControl-83 fromLeft" data-slider-id="83" data-slider-action="prev">
+												<svg xmlns="http://www.w3.org/2000/svg" width="32" height="32">
+												  <path fill="#6772E5" d="M 5.67 6 h 9.83 a 1.5 1.5 0 1 1 0 3 H 5.67 l 3.44 3.44 a 1.5 1.5 0 0 1 0 2.12 c -0.59 0.59 -1.53 0.59 -2.11 0 L 0 7.5 L 7 0.44 a 1.49 1.49 0 0 1 2.1 0 a 1.5 1.5 0 0 1 0 2.12 L 5.68 6 Z"/>
+												</svg>
+											</div>
+											<div class="rightControl-83 fromRight" data-slider-id="83" data-slider-action="next">
+												<svg xmlns="http://www.w3.org/2000/svg" width="32" height="32">
+												  <path fill="#6772E5" d="M 11.33 6 H 1.5 a 1.5 1.5 0 1 0 0 3 h 9.83 l -3.44 3.44 a 1.5 1.5 0 0 0 0 2.12 c 0.59 0.59 1.53 0.59 2.11 0 l 7 -7.06 l -7 -7.06 a 1.49 1.49 0 0 0 -2.1 0 a 1.5 1.5 0 0 0 0 2.12 L 11.32 6 Z"/>
+												</svg>
+											</div>
 											<li class="selected">
 												<h3>IKANO</h3>
 												<p>BRF Skogsstjärnan</p>
