Projects page ready for prod

--- a/projekt/index.html
+++ b/projekt/index.html
@@ -163,7 +163,7 @@
 					<h1 class="common-IntroText center">Våra projekt</h1>
 					<p class="common-BodyText center">Här byggs framtiden med noll fel</p>
 					<div class="photobanner">
-						<img class="first" style="0 15px 35px rgba(0,0,0,.1), 0 3px 10px rgba(0,0,0,.07)" src="../assets/img/projects/panorama_projects.png" alt="Panorama bild med utvalda projekt" />
+						<img class="first" src="../assets/img/projects/panorama_projects.png" alt="Panorama bild med utvalda projekt" />
 						<!-- duplicates to fake the panorama fx -->
 						<img src="../assets/img/projects/panorama_projects.png" alt="Panorama bild med utvalda projekt" />
 						<img src="../assets/img/projects/panorama_projects.png" alt="Panorama bild med utvalda projekt" />
@@ -175,7 +175,22 @@
 		</div>
 	</section>
 
-
+	<section class="slide whiteSlide" id="footer-nav">
+		<div class="container-lg padding-5 center">
+			<h3 class="center">Gå vidare här:</h3>
+			<div class="center-m-down">
+					<a href="../../om_oss/" class="common-Button text-blue">
+						Om oss
+					</a>
+					<a href="../../helhetskoncept/" class="common-Button text-blue">
+						Vårt helhetskoncept
+					</a>
+					<a href="../../tjanster/entreprenad/" class="common-Button text-blue">
+						Entreprenadbesiktning
+					</a>
+			</div>
+		</div>
+	</section>
 <!-- Footer -->
 <section class="slide customFooter">
   <div class="content">
