--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
 									</div>
 								</div>
 								<div class="center-m-down">
-									<a class="fromCenter popupTrigger" data-popup-id="ispect-projects">
+									<a class="fromCenter" href="projekt/">
 										<p class="common-Link">Några av våra senaste besiktningsuppdrag</p>
 									</a>
 								</div>
@@ -565,26 +565,6 @@
 		</div>
 		<p class="text-blueGrey center-m-down bold" style="font-size:13px;">© Besiktningsman.se - <a href="http://sebastianselling.com/" tabindex="_blank">Design av Sebastian Selling</a></p>
 	</section>
-	<!-- bm projects details Popup Text -->
-	<div class="popup white" data-popup-id="ispect-projects" id="ispect-projects">
-		<div class="close common-Button closeButton blue text-white soft-shadow bold">X</div>
-		<div class="content popupContent">
-			<div class="">
-				<!-- contents -->
-				<h1 class="center">Våra projekt</h1>
-				<p class="center">Här byggs framtiden med noll fel</p>
-				<div class="photobanner">
-					<img class="first" src="assets/img/projects/panorama_projects.jpg" alt="Panorama bild med utvalda projekt" />
-					<!-- duplicates to fake the panorama fx -->
-					<img src="assets/img/projects/panorama_projects.jpg" alt="Panorama bild med utvalda projekt" />
-					<img src="assets/img/projects/panorama_projects.jpg" alt="Panorama bild med utvalda projekt" />
-					<img src="assets/img/projects/panorama_projects.jpg" alt="Panorama bild med utvalda projekt" />
-					<img src="assets/img/projects/panorama_projects.jpg" alt="Panorama bild med utvalda projekt" />
-				</div>
-
-			</div>
-		</div>
-	</div>
 	<!-- POPUP WITH LINKS TO NEWSLETTER TEXTS -->
 	<div class="popup hidden" data-popup-id="docs" id="docs">
 		<div class="close closeButton left opaque white text-blue">X</div>
