added announcement tag above the order form

--- a/tjanster/privat/index.html
+++ b/tjanster/privat/index.html
@@ -485,14 +485,16 @@
 
 	</section>
 	<section class="slide white form-section">
+		<div class="margin-0 center">
+			<div class="announcement">
+				<span class="new-pill">OBS</span>
+				<span class="message left">
+						Besiktningstjänsterna för privatpersoner är för tillfället fullbokade.
+				</span>
+			</div>
+		</div>
 		<div class="container-lg">
 				<div class="formBackground form-column">
-					<div class="announcement center-m-down">
-	          <span class="new-pill">OBS</span>
-	          <span class="message">
-	              Besiktningstjänsterna för privatpersoner är för tillfället fullbokade.
-	          </span>
-					</div>
 					<div class="inactive-Overlay">
 						<h3 class="pad-header margin-0 text-blueGrey center">
 							Redo att boka?
@@ -503,12 +505,13 @@
 					</div>
 				</div>
 				<div class="secondary-column">
+
 					<div class="customers">
 						<p class="copy-1">Du är i gott sällskap.</p>
 						<p class="copy-2">Gör som många andra och anlita Besiktningsman.se</p>
 						<ul class="customer-logos">
 							<li class="customer-logo">
-								<img src="../../../assets/img/logos/tjanster/einarmattsson_logo.png" alt="EINAR MATTSSON">
+								<img src="../../assets/img/logos/tjanster/einarmattsson_logo.png" alt="EINAR MATTSSON">
 							</li>
 							<!-- <li class="customer-logo">
 								<img src="../../../assets/img/logos/tjanster/ssm_logo.png" alt="SSM">
