Removed contact button for private inspections + hover on private button, notifications only on the subpage

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 						<p class="hero">Sveriges ledande entreprenadbesiktningsföretag</p>
 						<a href="#entreprenad" class="common-Button text-blue fromCenter">ENTREPRENAD</a>
 						<a href="#brf" class="common-Button text-blue fromCenter">brf</a>
-						<a href="#privat" class="text-blue fromCenter onTop inactive-Button" data-tooltip="Besiktningstjänsterna för privatpersoner är för tillfället fullbokade.">PRIVAT</a>
+						<a href="#privat" class="common-Button text-blue fromCenter">PRIVAT</a>
 						<br>
 						<br>
 						<a href="tel:0101654000" id="mobilePhoneNumber">
@@ -444,12 +444,6 @@
 					<div class="fix-12-12">
 						<ul class="flex reverse">
 							<li class="col-6-12 left cell-32">
-								<div class="announcement">
-				          <span class="new-pill">OBS</span>
-				          <span class="message">
-				              Besiktningstjänsterna för privatpersoner är för tillfället fullbokade.
-				          </span>
-								</div>
 								<h2 class="common-IntroText">Besiktningstjänster för privatpersoner</h2>
 								<h3 class="common-BodyTitle">Småhus, lägenheter, fritidshus</h3>
 								<p class="common-BodyText">Besiktningsman.se erbjuder besiktningstjänster för samtliga fack för besiktning av småhus, fritidshus och lägenheter, samt KA-ansvariga.</p>
@@ -457,16 +451,14 @@
 									<a href="tjanster/privat/">
 										<p class="common-Link">Gå till tjänster för privatpersoner<i class="icono-arrow2-left"></i></p>
 									</a>
-									<!-- typeform button -->
-									<p>Frågor? Lämna ett meddelande så hjälper vi dig!</p>
+									<!-- <p>Frågor? Lämna ett meddelande så hjälper vi dig!</p>
 									<a class="typeform-share common-Button blue text-white margin-bottom-2" href="https://besiktningsman-se.typeform.com/to/Qwy9Nf" data-mode="popup" target="_blank">
 										Lämna ett meddelande
 									</a>
-									<!-- typeform JS -->
 									<script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
 									<a href="tel:0101654000">
 										<p class="common-Link">Ni kan även ringa oss på: 010-165 40 00</p>
-									</a>
+									</a> -->
 								</div>
 							</li>
 							<li class="col-6-12 left fromRight">
